Added the display cards for books. Array iteration does not work perfectly yet.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div class="button-container">
             <button class="add-button">Add New Book</button>
         </div>
+    </div>
 </body>
 
 </html>
