Minor UI changes. Began remove book feature.

--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
                     </div>
                     <div class="row4">
                         <label for="read">Have you read this book?</label><br>
-                        <input type="radio" id="read-yes" name="read" value="Yes">
-                        <label for="yes">Yes</label>
-                        <input type="radio" id="read-no" name="read" value="No">
-                        <label for="no">No</label><br>
+                        <input type="checkbox" id="read" value="Read">
                     </div>
                     <div class="submit-button"><button id="submit-button">Submit</button></div>
                 </div>
@@ -55,6 +52,7 @@
         <div class="button-container">
             <button class="add-button">Add New Book</button>
         </div>
+        <div class="book-container"></div>
     </div>
 </body>
 
