Fixed bug in which the marked-as-read button would not show proper color upon selection and adding a book.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="row4">
                         <label for="read">Have you read this book?</label><br>
-                        <input type="checkbox" id="read" value="Read">
+                        <input type="checkbox" id="read">
                     </div>
                     <div class="submit-button"><button id="submit-button">Submit</button></div>
                 </div>
